--- a/Task-03-CSS-Selectors/index.html
+++ b/Task-03-CSS-Selectors/index.html
@@ -1,202 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Резюме</title>
+    <meta charset="UTF-8" />
+    <title>Selectors Exercise</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <table border="1" cellpadding="5" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <td>
-                    <table width="100%">
-                        <tr>
-                            <td width="30%" align="center">
-                                <img src="http://img2.reactor.cc/pics/comment/full/World-of-Warcraft-Игры-Lich-King-Arthas-Menethil-1699919.jpeg"
-                                    alt="лицо" width="200">
-                            </td>
-                            <td width="30%" align="left">
-                                <h1 align="center"> Резюме </h1>
-                                <h2> Артас Менетил </h2>
-                                <em> Король-лич </em>
-                            </td>
-                            <td width="40%" align="right">
-                                <footer>
-                                    <table>
-                                        <tr>
-                                            <td colspan="2" align="center"><u>Контакты</u></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Почта:</td>
-                                            <td><a href="mailto:arthas@warcraft.com">arthas@warcraft.com</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Сайт:</td>
-                                            <td><a href="https://wowwiki.fandom.com/ru/wiki/Артас_Менетил"
-                                                    target="_blank">wowwiki.fandom.com/ru/wiki/Артас_Менетил</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Телефон:</td>
-                                            <td>1234567890</td>
-                                        </tr>
-                                    </table>
-                                </footer>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    <table border="1" cellpadding="5" cellspacing="0" width="100%">
-                        <tr>
-                            <td width="20%">
-                                <h2><em>Обо мне</em></h2>
-                            </td>
-                            <td width="80%">
-                                Кронпринц Лордерона и рыцарь Cеребряной Длани. Был сыном короля Теренаса Менетила II
-                                и
-                                наследником трона. Утер Светоносный обучал его бравому делу паладина, а к волшебнице
-                                Джайне
-                                Праудмур он испытывал романтические чувства. Но несмотря на многообещающее начало
-                                жизни,
-                                после объединения с Королем-личем, Артас стал одним из самых ужасных созданий,
-                                когда-либо
-                                встречавшихся на просторах Азерота.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td width="20%">
-                                <h2><em>Опыт работы</em></h2>
-                            </td>
-                            <td width="80%">
-                                <ul>
-                                    <li>
-                                        <h3>Альянс Лордерона</h3>
-                                        <em>01.01.2000 - 01.01.2019</em>
-                                        <p>
-                                            Принц Артас Менетил родился за четыре года до Первой войны в семье
-                                            короля
-                                            Теренаса Менетила II. Молодой принц рос в те времена, когда земли всего
-                                            Азерота
-                                            были пронизаны войной, Альянс находился в смятении, а темные облака всё
-                                            ещё
-                                            вырисовывались на горизонте.
-                                        </p>
-                                        <p>
-                                            Боевому искусству Артаса обучал сам Мурадин Бронзобород, брат короля
-                                            дворфов
-                                            Магни Бронзоборода. Артас преуспел в этом начинании и стал
-                                            экспертом-мечником.
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <h3>Орден Серебрянной Длани</h3>
-                                        <em>01.01.2019 - 01.01.2023</em>
-                                        <p>
-                                            Под покровительством Утера Светоносного Артас вступил в орден рыцарей
-                                            Серебряной
-                                            Длани в возрасте 19 лет. Одним из его самых известных подвигов стала
-                                            контратака
-                                            на троллей, атаковавших Кель'Талас из Зул'Амана.
-                                        </p>
-                                        <p>
-                                            Исследовал таинственную чуму. Сражаясь с армией мертвецов, убил
-                                            некроманта
-                                            Кел'Тузада, который уже заразил все зерно, хранившееся в Андорале и
-                                            отправил
-                                            его
-                                            в ближайшие деревни. По прибытии в Стратхольм Артас обнаружил, что зерно
-                                            уже
-                                            распределено между жителями города и осознал, что вскоре все они
-                                            превратятся
-                                            в
-                                            живых мертвецов. Артас распустил рыцарей Серебряной Длани. Оставшиеся
-                                            рыцари
-                                            помогли Артасу в уничтожении зараженных горожан.
-                                        </p>
-                                        <p>
-                                            Артас преследовал Мал'Ганиса до берегов Нортренда, нашел проклятый
-                                            клинок -
-                                            Ледяную Скорбь. Убив повелителя ужаса, Артас отправился на север,
-                                            оставив
-                                            свои
-                                            войска.
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <h3>Карающая Плеть</h3>
-                                        <em>01.01.2023 - 01.01.2028</em>
-                                        <p>
-                                            Спустя несколько месяцев Артас вернулся в Лордерон и убил своего отца.
-                                            Он
-                                            собрал
-                                            членов Культа Проклятых, и обнаружил тело Кел'Тузада. Артас истребил
-                                            народ
-                                            Луносвета, поработил Сильвану Ветроклырую в форме баньши и использовал
-                                            Солнечный
-                                            Колодец для возвращения Кел'Тузада к жизни в форме лича. Участвовал в
-                                            разорении
-                                            Даларана и призыве Архимонда.
-                                        </p>
-                                        <p>
-                                            Рассказал Иллидану как получить силу Черепа Гул'дана. Превратил
-                                            Сапфирона в
-                                            могущественного Ледяного змея. Победил Иллидана у врат Ледяной Короны.
-                                            Слился с
-                                            Королем-личем.
-                                        </p>
-                                    </li>
-                                </ul>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td width="20%">
-                                <h2><em>Навыки</em></h2>
-                            </td>
-                            <td width="80%">
-                                <ul>
-                                    <li>
-                                        Физический урон
-                                        <ul>
-                                            <li>Сотрясение</li>
-                                            <li>Призыв вурдалаков</li>
-                                            <li>Гневный дух</li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        Тьма
-                                        <ul>
-                                            <li>Призыв шаркающего ужаса</li>
-                                            <li>Осквернение</li>
-                                            <li>Неистовство Ледяной Скорби</li>
-                                            <li>Мертвящая чума</li>
-                                            <li>Заражение</li>
-                                            <li>Жнец душ</li>
-                                            <li>Вызов валь'киры</li>
-                                            <li>Воскрешение мертвых</li>
-                                            <li>Боль и страдание</li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        Лед
-                                        <ul>
-                                            <li>Ледяной замок</li>
-                                            <li>Беспощадность зимы</li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <h1>Selectors Exercise</h1>
+    <p>PARAGRAPH NOT INSIDE A DIV</p>
+    <div>
+        <p class="hello">I am a paragraph with a class</p>
+        <p id="special">I am a paragraph with an ID</p>
+        <h2>I am an awesome h2</h2>
+        <p>
+            Roof party yr hella synth, Wes Anderson narwhal four dollar toast before
+            they sold out retro lo-fi. Austin iPhone pop-up farm-to-table, PBR&B
+            McSweeney's ennui messenger bag distillery before they sold out Portland
+            wolf fanny pack YOLO. Locavore slow-carb trust fund farm-to-table.
+            Pinterest gastropub lo-fi, McSweeney's trust fund VHS shabby chic ugh
+            Austin twee. Messenger bag banjo lumbersexual, whatever 3 wolf moon XOXO
+            normcore. Pug fanny pack 3 wolf moon, typewriter organic chia mustache
+            scenester seitan shabby chic Blue Bottle salvia ugh iPhone. Fanny pack
+            Williamsburg direct trade, cold-pressed disrupt flannel listicle health
+            goth asymmetrical freegan mixtape street art pour-over whatever.
+        </p>
+    </div>
+    <div>
+        <h2>Things I need to do</h2>
+        <ul>
+            <li>Walk Dog <input type="checkbox" checked /></li>
+            <li>Feed Dog <input type="checkbox" checked /></li>
+            <li>Wash Dog <input type="checkbox" /></li>
+        </ul>
+    </div>
+    <div>
+        <h2>I am another awesome h2</h2>
+        <p>
+            Cardigan Tumblr mlkshk, fap tilde 3 wolf moon Portland. Heirloom health
+            goth taxidermy blog lo-fi selfies, post-ironic master cleanse
+            fingerstache normcore. Kickstarter plaid twee, bespoke single-origin
+            coffee sustainable lo-fi vinyl Pinterest pork belly
+            <em>cronut skateboard</em> 3 wolf moon. Normcore single-origin coffee
+            salvia, bespoke Austin swag Godard before they sold out kogi disrupt
+            locavore. Lumbersexual Shoreditch Vice, artisan American Apparel master
+            cleanse yr salvia vegan. Bespoke letterpress heirloom kale chips deep v
+            four loko. Lomo sustainable put a bird on it trust fund post-ironic
+        </p>
+        <p>I'm the second paragraph inside this div!</p>
+    </div>
+    <p>PARAGRAPH NOT INSIDE A DIV</p>
+    <div>
+        <h2>A less awesome h2</h2>
+        <p>
+            Roof party yr hella synth, Wes Anderson narwhal four dollar toast before
+            they sold out retro lo-fi. Austin iPhone pop-up farm-to-table, PBR&B
+            McSweeney's ennui messenger bag distillery before they sold out Portland
+            wolf fanny pack YOLO. Locavore slow-carb trust fund farm-to-table.
+            Pinterest gastropub lo-fi, McSweeney's trust fund VHS shabby chic ugh
+            Austin twee. Messenger bag banjo lumbersexual, whatever 3 wolf moon XOXO
+            normcore. Pug fanny pack 3 wolf moon, typewriter organic chia mustache
+            scenester seitan shabby chic Blue Bottle <em>salvia ugh iPhone</em>.
+            Fanny pack Williamsburg direct trade, cold-pressed disrupt flannel
+            listicle health goth asymmetrical freegan mixtape street art pour-over
+            whatever
+        </p>
+        <p>One last paragraph here!</p>
+        <a href="https://www.facebook.com" target="_blank">I am a link to facebook</a>
+        <a href="https://www.google.com" target="_blank">I a link to google</a><br />
+        <input type="text" name="name" id="name" /><label for="name"> Name</label><br />
+        <input type="password" name="password" id="password" /><label for="password">Password</label>
+    </div>
+    <p>PARAGRAPH NOT INSIDE A DIV</p>
 </body>
 
 </html>
