--- a/Task-06_JS-Basics/index.html
+++ b/Task-06_JS-Basics/index.html
@@ -8,81 +8,15 @@
 </head>
 
 <body>
-    <table>
-        <tr>
-            <td>
-                task 1
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <table class="width_100">
-                    <tr>
-                        <td>
-                            1
-                        </td>
-                        <td>
-                            2
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            1
-                        </td>
-                        <td>
-                            2
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            1
-                        </td>
-                        <td>
-                            2
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                task 2
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <table class="width_100">
-                    <tr>
-                        <td>
-                            3
-                        </td>
-                        <td>
-                            4
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            3
-                        </td>
-                        <td>
-                            4
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            3
-                        </td>
-                        <td>
-                            4
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-    
+    Why are we still here? Just to suffer?
+    <br>
+    Я хотел сделать скрипты модулями, но тогда подтягивание файлов блокируется "by CORS policy", если не запускать это дело на сервере.
+    <br>
+    Так что имеем, что имеем.
 </body>
 
+<script src="render_lib.js"></script>
+<script src="functions_lib.js"></script>
 <script src="script.js"></script>
 
 </html>
