--- a/Task-10_Browser-game/src/index.html
+++ b/Task-10_Browser-game/src/index.html
@@ -3,12 +3,40 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Браузерная игра</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <h1 class="test-style">Hello</h1>
+    <div class="main_page_container">
+        <div id="main_disp" class="width_100 height_70 align_center">
+            Игровой экран
+        </div>
+        <table class="buttons_container align_center">
+            <tr class="align_center">
+                <td id="button_back" class="game_button">
+                    назад
+                </td>
+                <td id="button_up" class="game_button">
+                    ▲
+                </td>
+                <td id="button_use" class="game_button">
+                    использовать
+                </td>
+            </tr>
+            <tr class="align_center">
+                <td id="button_left" class="game_button">
+                    ◀
+                </td>
+                <td id="button_down" class="game_button">
+                    ▼
+                </td>
+                <td id="button_right" class="game_button">
+                    ▶
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 
 </html>
