Add overflow class

--- a/Task-10_Browser-game/src/index.html
+++ b/Task-10_Browser-game/src/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="main_page_container">
-        <div id="main_disp" class="width_100 height_70 align_center">
+        <div id="main_disp" class="width_100 height_70 align_center overflow-y-auto">
             Игровой экран
         </div>
         <table class="buttons_container align_center">
