--- a/Task-10_Browser-game/src/index.html
+++ b/Task-10_Browser-game/src/index.html
@@ -9,29 +9,29 @@
 
 <body>
     <div class="main-page-container">
-        <div id="main_disp" class="width-100 height-70 align-center overflow-y-auto">
+        <div id="main-display" class="width-100 height-70 align-center overflow-y-auto">
             Игровой экран
         </div>
         <table class="buttons-container align-center">
             <tr class="align-center">
-                <td id="button_back" class="game-button">
+                <td id="button-back" class="game-button">
                     назад
                 </td>
-                <td id="button_up" class="game-button">
+                <td id="button-up" class="game-button">
                     ▲
                 </td>
-                <td id="button_use" class="game-button">
+                <td id="button-use" class="game-button">
                     использовать
                 </td>
             </tr>
             <tr class="align-center">
-                <td id="button_left" class="game-button">
+                <td id="button-left" class="game-button">
                     ◀
                 </td>
-                <td id="button_down" class="game-button">
+                <td id="button-down" class="game-button">
                     ▼
                 </td>
-                <td id="button_right" class="game-button">
+                <td id="button-right" class="game-button">
                     ▶
                 </td>
             </tr>
